# telco-churn-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  index.html  pyproject.toml
.github/workflows/: ci.yml
notebook/: experiment.ipynb
notebooks/: README.md
pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
reports/: metrics.json
src/: __init__.py  evaluation.py  ingestion.py  prediction.py  preprocessing.py  training.py
tests/: test_api.py  test_ingestion.py  test_preprocessing.py  test_training.py
