[project]
name = "telco-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi<=0.115.8",
    "joblib>=1.5.3",
    "mlflow>=2.17.0",
    "pandas>=2.2.0,<3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.45.0",
    "zenml[server]==0.94.2",
]
